<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reload_subscription"
            android:icon="@drawable/ic_local_atm_black_24dp"
            android:title="@string/menu_reload_subscription" />
        <item
            android:id="@+id/nav_bills_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_bills_payment" />
        <item
            android:id="@+id/nav_consumption_history"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/menu_consumption_history" />
    </group>

    <item android:title="à propo">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_forum_black_24dp"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/menu_map" />
        </menu>
    </item>

</menu>
