<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ma.onee.electrique.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reload_subscription"
        android:name="ma.onee.electrique.ui.reloadSubscription.ReloadSubscriptionFragment"
        android:label="@string/menu_reload_subscription"
        tools:layout="@layout/fragment_reload_subscription" />

    <fragment
        android:id="@+id/nav_bills_payment"
        android:name="ma.onee.electrique.ui.billsPayment.BillsPaymentFragment"
        android:label="@string/menu_bills_payment"
        tools:layout="@layout/fragment_bills_payment" />

    <fragment
        android:id="@+id/nav_consumption_history"
        android:name="ma.onee.electrique.ui.consumptionHistory.ConsumptionHistoryFragment"
        android:label="@string/menu_consumption_history"
        tools:layout="@layout/fragment_consumption_history" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="ma.onee.electrique.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ma.onee.electrique.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

</navigation>